# WhiteCapData-Dev

./: CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  server.json
.github/workflows/: ci.yml
src/homelab_mcp/: __init__.py  config.py  format.py  kube.py  server.py
tests/: conftest.py  test_config.py  test_format.py  test_kube.py  test_server_tools.py
