[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "homelab-mcp"
version = "0.1.0"
description = "An MCP server to operate a k3s / Kubernetes cluster — health, logs, and guarded restart/scale/delete — straight from your AI agent."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Michael Tierney" }]
keywords = ["mcp", "model-context-protocol", "kubernetes", "k3s", "k8s", "homelab", "devops", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "mcp>=1.2",
    "kubernetes>=29",
]

[project.urls]
Homepage = "https://github.com/Michael-WhiteCapData/homelab-mcp"
Repository = "https://github.com/Michael-WhiteCapData/homelab-mcp"
Issues = "https://github.com/Michael-WhiteCapData/homelab-mcp/issues"

[project.scripts]
homelab-mcp = "homelab_mcp.server:main"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.6"]

[tool.hatch.build.targets.wheel]
packages = ["src/homelab_mcp"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PLC"]
